--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="style/images/favicon.png">
-  <title>Missio</title>
+  <link rel="shortcut icon" href="style/images/logo.png">
+  <title>PereiraATXFoto</title>
   <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style/css/plugins.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/settings.css">
@@ -19,7 +19,7 @@
     <nav class="navbar center navbar-expand-lg">
       <div class="container flex-lg-column">
         <div class="navbar-header">
-          <div class="navbar-brand"><a href="index.html"><img src="#" srcset="style/images/logo.png 1x, style/images/logo@2x.png 2x" alt="" /></a></div>
+          <div class="navbar-brand"><a href="index.html"><img class="img-fluid" src="style/images/logo.png" alt="" /></a></div>
           <div class="navbar-hamburger ml-auto d-lg-none d-xl-none"><button class="hamburger animate" data-toggle="collapse" data-target=".navbar-collapse"><span></span></button></div>
         </div>
         <!-- /.navbar-header -->
@@ -582,7 +582,7 @@
           <div class="col-md-4">
             <h4 class="text-uppercase mb-20">Instagram Shots</h4>
             <div class="tiles tiles-s">
-              <div id="instafeed-widget-wedding" class="items row"></div>
+              <div id="instafeed-widget" class="items row"></div>
             </div>
             <!--/.tiles -->
           </div>
@@ -611,20 +611,17 @@
       <div class="container inner">
         <div class="row d-md-flex align-items-md-center">
           <div class="col-md-4 text-center text-md-left">
-            <p class="mb-0">© 2019 Missio. All rights reserved.</p>
+            <p class="mb-0">© <span class="current-year"></span> PereiraATXFoto. All rights reserved.</p>
           </div>
           <!--/column -->
           <div class="col-md-4 text-center">
-            <img src="#" srcset="style/images/logo-light.png 1x, style/images/logo-light@2x.png 2x" alt="" />
+            <img class="img-fluid" src="style/images/logo.png" alt="" />
           </div>
           <!--/column -->
           <div class="col-md-4 text-center text-md-right">
             <ul class="social social-mute social-s mt-10">
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-              <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-              <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/Pereira.AtxFotografia/"><i class="fa fa-facebook-f"></i></a></li>
+              <li><a href="https://www.instagram.com/pereira.atxfotografia/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <!--/column -->
