Update navigation tab text

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <li class="nav-item"><a class="dropdown-item" href="portfolio8.html">Photo Album</a></li>
               </ul>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">Gallery</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">Community Involvement</a>
               <ul class="dropdown-menu">
                 <li class="nav-item"><a class="dropdown-item" href="gallery.html">Polaroid Style</a></li>
                 <li class="nav-item"><a class="dropdown-item" href="gallery2.html">List Type</a></li>
@@ -149,7 +149,7 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">Pages</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">Albums</a>
               <ul class="dropdown-menu">
                 <li class="nav-item"><a class="dropdown-item" href="about.html">About I</a></li>
                 <li class="nav-item"><a class="dropdown-item" href="about2.html">About II</a></li>
@@ -157,7 +157,7 @@
                 <li class="nav-item"><a class="dropdown-item" href="page-loading.html">Page Loading</a></li>
               </ul>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">Blog</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">Pricing</a>
               <ul class="dropdown-menu">
                 <li class="nav-item"><a class="dropdown-item" href="blog.html">Classic View No Sidebar</a></li>
                 <li class="nav-item"><a class="dropdown-item" href="blog2.html">Classic View with Sidebar</a></li>
@@ -173,7 +173,7 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">Features</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">About Me</a>
               <ul class="dropdown-menu">
                 <li class="nav-item dropdown"><a class="dropdown-item dropdown-toggle" href="#">Header</a>
                   <ul class="dropdown-menu">
@@ -256,7 +256,7 @@
                 <li class="nav-item"><a class="dropdown-item" href="box-layout.html">Box Layout</a></li>
               </ul>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Elements</a>
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a>
               <ul class="dropdown-menu mega-menu boxed list-view text-left">
                 <li class="mega-menu-content">
                   <div class="image-block-wrapper">
@@ -333,13 +333,6 @@
                 <!--/.mega-menu-content-->
               </ul>
               <!--/.dropdown-menu -->
-            </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">Contact</a>
-              <ul class="dropdown-menu">
-                <li class="nav-item"><a class="dropdown-item" href="contact.html">Contact I</a></li>
-                <li class="nav-item"><a class="dropdown-item" href="contact2.html">Contact II</a></li>
-                <li class="nav-item"><a class="dropdown-item" href="contact3.html">Contact III</a></li>
-              </ul>
             </li>
           </ul>
         </div>
