Add pricing page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- /.navbar-header -->
         <div class="navbar-collapse collapse w-100 bg-light">
           <ul class="navbar-nav nav-fill w-100">
-            <li class="nav-item"><a class="nav-link" href="#">Home</a>
+            <li class="nav-item"><a class="nav-link" href="/">Home</a>
               <ul class="dropdown-menu mega-menu boxed list-view text-left">
                 <li class="mega-menu-content">
                   <div class="image-block-wrapper">
@@ -157,7 +157,7 @@
                 <li class="nav-item"><a class="dropdown-item" href="page-loading.html">Page Loading</a></li>
               </ul>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#">Pricing</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="/pricing">Pricing</a>
               <ul class="dropdown-menu">
                 <li class="nav-item"><a class="dropdown-item" href="blog.html">Classic View No Sidebar</a></li>
                 <li class="nav-item"><a class="dropdown-item" href="blog2.html">Classic View with Sidebar</a></li>
