Remove contact menu dropdown

--- a/index.html
+++ b/index.html
@@ -37,83 +37,7 @@
             </li>
             <li class="nav-item"><a class="nav-link" href="/shop">Shop</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact</a>
-              <ul class="dropdown-menu mega-menu boxed list-view text-left">
-                <li class="mega-menu-content">
-                  <div class="image-block-wrapper">
-                    <div class="image-block col-lg-4 col-xl-5">
-                      <div class="image-block-bg bg-image" data-image-src="style/images/art/me1.jpg"></div>
-                    </div>
-                    <!--/.image-block -->
-                    <div class="container-fluid">
-                      <div class="row">
-                        <div class="col-lg-8 offset-lg-4 col-xl-7 offset-xl-5">
-                          <div class="box">
-                            <div class="row">
-                              <div class="col-lg-4">
-                                <ul class="list-unstyled">
-                                  <li><a href="accordion.html">Accordion</a></li>
-                                  <li><a href="alerts.html">Alerts</a></li>
-                                  <li><a href="blockquote.html">Blockquote</a></li>
-                                  <li><a href="buttons-badges.html">Buttons & Badges</a></li>
-                                  <li><a href="caption.html">Caption</a></li>
-                                  <li><a href="color-box.html">Color Box</a></li>
-                                  <li><a href="countdown.html">Countdown</a></li>
-                                  <li><a href="counter.html">Counter</a></li>
-                                  <li><a href="dividers.html">Dividers</a></li>
-                                  <li><a href="dropcap.html">Dropcap</a></li>
-                                  <li><a href="forms.html">Forms</a></li>
-                                </ul>
-                              </div>
-                              <!--/column -->
-                              <div class="col-lg-4">
-                                <ul class="list-unstyled">
-                                  <li><a href="icon-solid.html">Icons - Solid</a></li>
-                                  <li><a href="icon-line.html">Icons - Line</a></li>
-                                  <li><a href="instagram-feed.html">Instagram Feed</a></li>
-                                  <li><a href="hover.html">Hover</a></li>
-                                  <li><a href="lightbox.html">Lightbox</a></li>
-                                  <li><a href="lists.html">Lists</a></li>
-                                  <li><a href="list-group.html">List Group</a></li>
-                                  <li><a href="player.html">Media Player</a></li>
-                                  <li><a href="pagination.html">Pagination</a></li>
-                                  <li><a href="pricing.html">Pricing Tables</a></li>
-                                  <li><a href="progressbar.html">Progress Bar</a></li>
-                                </ul>
-                              </div>
-                              <!--/column -->
-                              <div class="col-lg-4">
-                                <ul class="list-unstyled">
-                                  <li><a href="animations.html">Scroll Animations</a></li>
-                                  <li><a href="services-icon.html">Services - Icon</a></li>
-                                  <li><a href="services-image.html">Services - Image</a></li>
-                                  <li><a href="social-icons.html">Social Icons</a></li>
-                                  <li><a href="tables.html">Tables</a></li>
-                                  <li><a href="tabs.html">Tabs</a></li>
-                                  <li><a href="team.html">Team</a></li>
-                                  <li><a href="testimonials.html">Testimonials</a></li>
-                                  <li><a href="tooltip-popover.html">Tooltip & Popover</a></li>
-                                  <li><a href="typography.html">Typography</a></li>
-                                  <li><a href="wrappers.html">Wrappers</a></li>
-                                </ul>
-                              </div>
-                              <!--/column -->
-                            </div>
-                            <!--/.row -->
-                          </div>
-                          <!-- /.box -->
-                        </div>
-                        <!--/column -->
-                      </div>
-                      <!--/.row -->
-                    </div>
-                    <!--/.container-fluid -->
-                  </div>
-                  <!--/.image-block-wrapper -->
-                </li>
-                <!--/.mega-menu-content-->
-              </ul>
-              <!--/.dropdown-menu -->
+            <li class="nav-item"><a class="nav-link" href="/contact">Contact</a>
             </li>
           </ul>
         </div>
