Add instagram feed to bottom of homepage

--- a/index.html
+++ b/index.html
@@ -302,6 +302,14 @@
         </div>
         <!--/.row -->
       </div>
+      <div class="container inner">
+        <div class="tiles tiles-s">
+          <div id="instafeed" class="items row"></div>
+        </div>
+        <!--/.tiles -->
+        <div class="space40"></div>
+        <div class="text-center"><a href="#" class="btn">Follow on Instagram @pereira.atxfotografia</a></div>
+      </div>
       <!-- /.container -->
     </div>
     <!-- /.wrapper -->
