--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar center navbar-expand-lg">
       <div class="container flex-lg-column">
         <div class="navbar-header">
-          <div class="navbar-brand"><a href="index.html"><img class="img-fluid" src="style/images/logo.png" alt="" /></a></div>
+          <div class="navbar-brand"><a href="/"><img class="img-fluid" src="style/images/logo.png" alt="" /></a></div>
           <div class="navbar-hamburger ml-auto d-lg-none d-xl-none"><button class="hamburger animate" data-toggle="collapse" data-target=".navbar-collapse"><span></span></button></div>
         </div>
         <!-- /.navbar-header -->
