--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
             </li>
             <li class="nav-item"><a class="nav-link" href="/gallery">Gallery</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="/albums">Albums Involvement</a>
+            <li class="nav-item"><a class="nav-link" href="/albums">Albums</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="/community">Community Involvement</a>
             </li>
