Add testimonial to the homepage

--- a/index.html
+++ b/index.html
@@ -253,54 +253,6 @@
         </div>
         <!-- /.row -->
         <div class="space70"></div>
-        <div class="row">
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-20">My Skills</h4>
-            <ul class="progress-list">
-              <li>
-                <p>Photoshop</p>
-                <div class="progressbar line pastel-default" data-value="90"></div>
-              </li>
-              <li>
-                <p>Final Cut</p>
-                <div class="progressbar line pastel-default" data-value="80"></div>
-              </li>
-              <li>
-                <p>Studio Photography</p>
-                <div class="progressbar line pastel-default" data-value="85"></div>
-              </li>
-              <li>
-                <p>Motion Video</p>
-                <div class="progressbar line pastel-default" data-value="65"></div>
-              </li>
-            </ul>
-            <!-- /.progress-list -->
-          </div>
-          <!--/column -->
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-20">Instagram Shots</h4>
-            <div class="tiles tiles-s">
-              <div id="instafeed-widget" class="items row"></div>
-            </div>
-            <!--/.tiles -->
-          </div>
-          <!--/column -->
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-20">My Equipment</h4>
-            <ul class="unordered-list list-default">
-              <li>Canon Eos 5D Mark IV 24-105mm</li>
-              <li>Manfrotto Compact Tripod</li>
-              <li>DJI Ronin MX 3-Axis Gimbal Stabilizer</li>
-              <li>Canon EF100-400MM Lens</li>
-              <li>Wondlan Wer01 Wireless Slider Time Lapse</li>
-              <li>Nikon D5 24-70mm F2.8</li>
-              <li>Nikon Af-S 24Mm F/1.4G Ed Lens</li>
-              <li>Wondlan Sniper Sn 2.1 Wf Wireless Dslr Rig</li>
-            </ul>
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
       </div>
       <div class="container inner">
         <div class="tiles tiles-s">
@@ -309,6 +261,73 @@
         <!--/.tiles -->
         <div class="space40"></div>
         <div class="text-center"><a href="#" class="btn">Follow on Instagram @pereira.atxfotografia</a></div>
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.wrapper -->
+    <div class="wrapper gray-wrapper">
+      <div class="container inner">
+        <h2 class="section-title mb-40 text-center">Testimonials Slider - Alternative</h2>
+        <div class="row">
+          <div class="col-md-10 offset-md-1">
+            <div class="cube-slider cbp-slider-edge cbp">
+              <div class="cbp-item pl-60 pr-60 pb-10">
+                <div class="row d-flex">
+                  <div class="col-md-6 pr-35 pr-sm-15">
+                    <figure><img src="style/images/art/te1.jpg" alt="" /></figure>
+                  </div>
+                  <!--/column -->
+                  <div class="col-md-6 align-self-center">
+                    <blockquote class="icon icon-left">
+                      <p>Consectetur adipiscing elit. Duis mollis, est non commodo luctus gestas eget quam integer. Curabitur blandit tempus rutrum faucibus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+                      <footer class="blockquote-footer">Mildred & Austin</footer>
+                    </blockquote>
+                  </div>
+                  <!--/column -->
+                </div>
+                <!--/.row -->
+              </div>
+              <!-- /.cbp-item -->
+              <div class="cbp-item pl-60 pr-60 pb-10">
+                <div class="row d-flex">
+                  <div class="col-md-6 pr-35 pr-sm-15">
+                    <figure><img src="style/images/art/te2.jpg" alt="" /></figure>
+                  </div>
+                  <!--/column -->
+                  <div class="col-md-6 align-self-center">
+                    <blockquote class="icon icon-left">
+                      <p>Consectetur adipiscing elit. Duis mollis, est non commodo luctus gestas eget quam integer. Curabitur blandit tempus rutrum faucibus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+                      <footer class="blockquote-footer">Mildred & Austin</footer>
+                    </blockquote>
+                  </div>
+                  <!--/column -->
+                </div>
+                <!--/.row -->
+              </div>
+              <!-- /.cbp-item -->
+              <div class="cbp-item pl-60 pr-60 pb-10">
+                <div class="row d-flex">
+                  <div class="col-md-6 pr-35 pr-sm-15">
+                    <figure><img src="style/images/art/te3.jpg" alt="" /></figure>
+                  </div>
+                  <!--/column -->
+                  <div class="col-md-6 align-self-center">
+                    <blockquote class="icon icon-left">
+                      <p>Consectetur adipiscing elit. Duis mollis, est non commodo luctus gestas eget quam integer. Curabitur blandit tempus rutrum faucibus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+                      <footer class="blockquote-footer">Mildred & Austin</footer>
+                    </blockquote>
+                  </div>
+                  <!--/column -->
+                </div>
+                <!--/.row -->
+              </div>
+              <!-- /.cbp-item -->
+            </div>
+            <!-- /.cbp -->
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
       </div>
       <!-- /.container -->
     </div>
