Match background colors on all pages

--- a/albums.html
+++ b/albums.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </nav>
-    <div class="wrapper light-wrapper">
+    <div class="wrapper bg-pastel-default">
       <div class="container inner pt-70">
         <h1 class="heading text-center">Hi, This is Missio</h1>
         <h2 class="sub-heading2 text-center">Wedding, Fashion, Event Photographer</h2>
