--- a/community.html
+++ b/community.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </nav>
-    <div class="wrapper light-wrapper">
+    <div class="wrapper bg-pastel-default">
       <div class="container inner pt-60">
         <div class="blog classic-view">
           <div class="post text-center">
