--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </nav>
-    <div class="wrapper light-wrapper">
+    <div class="wrapper bg-pastel-default">
       <div class="container inner pt-70">
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
