--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </nav>
-    <div class="wrapper light-wrapper">
+    <div class="wrapper bg-pastel-default">
       <div class="container inner">
         <h2 class="section-title mb-40 text-center">Services with Grid View</h2>
         <div class="space10"></div>
