--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
     <nav class="navbar center navbar-expand-lg">
       <div class="container flex-lg-column">
         <div class="navbar-header">
-          <div class="navbar-brand"><a href="/"><img class="img-fluid" src="style/images/logo.png" alt="" /></a></div>
+          <div class="navbar-brand"><a href="/"><img class="img-fluid logo" src="style/images/logo.png" alt="" /></a></div>
           <div class="navbar-hamburger ml-auto d-lg-none d-xl-none"><button class="hamburger animate" data-toggle="collapse" data-target=".navbar-collapse"><span></span></button></div>
         </div>
         <!-- /.navbar-header -->
@@ -124,13 +124,13 @@
           </div>
           <!--/column -->
           <div class="col-md-4 text-center">
-            <img class="img-fluid" src="style/images/logo.png" alt="" />
+            <img class="img-fluid logo" src="style/images/logo.png" alt="" />
           </div>
           <!--/column -->
           <div class="col-md-4 text-center text-md-right">
             <ul class="social social-mute social-s mt-10">
-              <li><a href="https://www.facebook.com/Pereira.AtxFotografia/"><i class="fa fa-facebook-f"></i></a></li>
-              <li><a href="https://www.instagram.com/pereira.atxfotografia/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/pereira.atxfoto/"><i class="fa fa-facebook-f"></i></a></li>
+              <li><a href="https://www.instagram.com/pereira.atxfoto/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <!--/column -->
