--- a/gallery.html
+++ b/gallery.html
@@ -129,8 +129,8 @@
           <!--/column -->
           <div class="col-md-4 text-center text-md-right">
             <ul class="social social-mute social-s mt-10">
-              <li><a href="https://www.facebook.com/pereira.atxfoto/"><i class="fa fa-facebook-f"></i></a></li>
-              <li><a href="https://www.instagram.com/pereira.atxfoto/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/PereiraATXFoto/"><i class="fa fa-facebook-f"></i></a></li>
+              <li><a href="https://www.instagram.com/PereiraATXFoto/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <!--/column -->
