--- a/index.html
+++ b/index.html
@@ -115,124 +115,6 @@
       <!-- /.container -->
     </div>
     <!-- /.wrapper -->
-    <div class="wrapper bg-pastel-default">
-      <div class="container inner">
-        <div class="row d-flex align-items-center">
-          <div class="col-lg-8 pr-35 pr-sm-15">
-            <video poster="style/media/wedding.jpg" class="player" playsinline controls preload="none">
-              <source src="style/media/wedding.mp4" type="video/mp4">
-              <source src="style/media/wedding.webm" type="video/webm">
-            </video>
-          </div>
-          <!-- /column -->
-          <div class="space30 d-none d-md-block d-lg-none"></div>
-          <div class="col-lg-4">
-            <h2 class="section-title section-title-upper larger">Featured Wedding</h2>
-            <p>Curabitur blandit tempus porttitor. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-            <div class="space10"></div>
-            <a href="#" class="btn btn-white shadow mb-0">Check All Videos</a>
-          </div>
-          <!-- /column -->
-        </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.container -->
-    </div>
-    <!-- /.wrapper -->
-    <div class="wrapper light-wrapper">
-      <div class="container inner">
-        <h2 class="section-title section-title-upper larger text-center">Love Stories</h2>
-        <p class="lead text-center">Some of wonderful love stories I witnessed and had the chance to capture</p>
-        <div class="space30"></div>
-        <div class="tiles grid">
-          <div class="items row isotope boxed grid-view text-center">
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main mb-20 overlay overlay1 rounded"><a href="gallery-post.html"><img src="style/images/art/fs1.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Jane & Joe</h4>
-              </div>
-              <!-- /.box -->
-            </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main mb-20 overlay overlay1 rounded"><a href="gallery-post2.html"><img src="style/images/art/fs2.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Kate & Kevin</h4>
-              </div>
-              <!-- /.box -->
-            </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main mb-20 overlay overlay1 rounded"><a href="gallery-post3.html"><img src="style/images/art/fs3.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Hilary & Matthew</h4>
-              </div>
-              <!-- /.box -->
-            </div>
-            <!--/.item -->
-          </div>
-          <!--/.row -->
-        </div>
-        <!--/.tiles -->
-      </div>
-      <!-- /.container -->
-    </div>
-    <!-- /.wrapper -->
-    <div class="wrapper image-wrapper bg-image inverse-text" data-image-src="style/images/art/bg16.jpg">
-      <div class="container inner pt-150 pb-150">
-        <div class="row">
-          <div class="col-lg-10 offset-lg-1">
-            <div class="cube-slider cbp-slider-edge cbp">
-              <div class="cbp-item">
-                <blockquote class="icon icon-top larger text-center pl-60 pr-60">
-                  <p>Sed posuere consectetur est at lobortis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis, est non commodo luctus.</p>
-                  <footer class="blockquote-footer">Connor Gibson</footer>
-                </blockquote>
-              </div>
-              <!-- /.cbp-item -->
-              <div class="cbp-item">
-                <blockquote class="icon icon-top larger text-center pl-60 pr-60">
-                  <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper eget quam integer. </p>
-                  <footer class="blockquote-footer">Coriss Ambady</footer>
-                </blockquote>
-              </div>
-              <!-- /.cbp-item -->
-              <div class="cbp-item">
-                <blockquote class="icon icon-top larger text-center pl-60 pr-60">
-                  <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras justo odio, dapibus ac facilisis.</p>
-                  <footer class="blockquote-footer">Barclay Widerski</footer>
-                </blockquote>
-              </div>
-              <!-- /.cbp-item -->
-              <div class="cbp-item">
-                <blockquote class="icon icon-top larger text-center pl-60 pr-60">
-                  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam aenean lacinia. Curabitur blandit tempus in egestas consectetur.</p>
-                  <footer class="blockquote-footer">Nikola Brooten</footer>
-                </blockquote>
-              </div>
-              <!-- /.cbp-item -->
-            </div>
-            <!-- /.cbp -->
-          </div>
-          <!-- /column -->
-        </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.container -->
-    </div>
-    <!-- /.wrapper -->
     <div class="wrapper light-wrapper">
       <div class="container inner">
         <div class="row d-flex align-items-center">
@@ -260,7 +142,7 @@
         </div>
         <!--/.tiles -->
         <div class="space40"></div>
-        <div class="text-center"><a href="#" class="btn">Follow on Instagram @pereira.atxfoto</a></div>
+        <div class="text-center"><a href="#" class="btn">Follow on Instagram @PereiraATXFoto</a></div>
       </div>
       <!-- /.container -->
     </div>
@@ -345,8 +227,8 @@
           <!--/column -->
           <div class="col-md-4 text-center text-md-right">
             <ul class="social social-mute social-s mt-10">
-              <li><a href="https://www.facebook.com/pereira.atxfoto/"><i class="fa fa-facebook-f"></i></a></li>
-              <li><a href="https://www.instagram.com/pereira.atxfoto/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/PereiraATXFoto/"><i class="fa fa-facebook-f"></i></a></li>
+              <li><a href="https://www.instagram.com/PereiraATXFoto/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <!--/column -->
