--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container inner">
         <div class="row">
           <div class="col-md-6 text-right pr-35 pr-sm-15">
-            <h2 class="sub-heading">Welcome! I'm Caitlyn Missio, a photographer specializing in wedding and engagement photography.</h2>
+            <h2 class="sub-heading">Welcome! I'm Barbara Rodriguez-Pereira, a photographer that specializes in Graduation and Pet Photography</h2>
           </div>
           <!-- /column -->
           <div class="col-md-6">
@@ -86,7 +86,7 @@
               <figcaption class="d-flex">
                 <div class="align-self-center mx-auto">
                   <div class="caption-inner">
-                    <h3 class="text-uppercase mb-0">Engagement</h3>
+                    <h3 class="text-uppercase mb-0">Graduation</h3>
                   </div>
                 </div>
               </figcaption>
@@ -102,7 +102,7 @@
               <figcaption class="d-flex">
                 <div class="align-self-center mx-auto">
                   <div class="caption-inner">
-                    <h3 class="text-uppercase mb-0">Wedding</h3>
+                    <h3 class="text-uppercase mb-0">Pet</h3>
                   </div>
                 </div>
               </figcaption>
