Add bio, closes #16

--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
         <div class="row d-flex align-items-center">
           <div class="col-lg-6 pr-35 pr-sm-15">
             <h2 class="section-title section-title-upper larger">My Story</h2>
-            <p class="lead">Hi! I’m Missio, a wedding & portrait photographer. I would like to give you a unique photography experience, built to serve you best and capture your special moments for you and your families creatively and beautifully.</p>
-            <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum. Nulla vitae elit libero, a pharetra augue. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-              Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus. Fusce dapibus tellus cursus commodo.</p>
+            <p class="lead">Hello there! I am Barbara and I would like to give you a unique photography experience. Photography has given me the experience to better to serve you and capture your greatest milestones in life. I want to capture the special moments for you and your family creatively and beautifully.</p>
             <div class="space10"></div>
             <a href="#" class="btn btn-white shadow">More About Me</a>
           </div>
