--- a/community.html
+++ b/community.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="style/images/logo.png">
   <title>PereiraATXFoto</title>
-  <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
+  <link rel="icon" type="image/png" href="style/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="style/images/favicon-16x16.png" sizes="16x16" />
   <link rel="stylesheet" type="text/css" href="style/css/plugins.css">
+  <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/settings.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/layers.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/navigation.css">
