--- a/pricing.html
+++ b/pricing.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="style/images/logo.png">
   <title>PereiraATXFoto</title>
-  <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
+  <link rel="icon" type="image/png" href="style/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="style/images/favicon-16x16.png" sizes="16x16" />
   <link rel="stylesheet" type="text/css" href="style/css/plugins.css">
+  <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/settings.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/layers.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/navigation.css">
@@ -43,122 +45,137 @@
         </div>
       </div>
     </nav>
-    <div class="wrapper bg-pastel-default">
+    <div class="wrapper light-wrapper">
         <div class="container inner">
-                <h2 class="section-title mb-40 text-center">Pricing Table in Colored Box</h2>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="pricing panel box bg-pastel-lavender">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">Basic Plan</h4>
-                                <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">35</span>
-                                    <span class="price-duration">year</span></div>
-                            </div>
-                            <!--/.panel-heading -->
-                            <div class="panel-body">
-                                <table class="table">
-                                    <tr>
-                                        <td><strong>1</strong> Project </td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>100K</strong> API Access </td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>100MB</strong> Storage </td>
-                                    </tr>
-                                    <tr>
-                                        <td> Custom <strong>Cloud</strong> Services </td>
-                                    </tr>
-                                    <tr>
-                                        <td> Weekly <strong>Reports</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td> 7/24 <strong>Support</strong></td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <!--/.panel-body -->
-                            <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Choose Plan</a></div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="pricing panel box bg-pastel-lavender">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">Red Bud Package</h4>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">50</span>
+                                <span class="price-duration">per session</span></div>
                         </div>
-                        <!--/.pricing -->
-                    </div>
-                    <!--/column -->
-                    <div class="col-md-4">
-                        <div class="pricing panel box bg-pastel-rose">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">Premium Plan</h4>
-                                <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">45</span>
-                                    <span class="price-duration">year</span></div>
-                            </div>
-                            <!--/.panel-heading -->
-                            <div class="panel-body">
-                                <table class="table">
-                                    <tr>
-                                        <td><strong>5</strong> Projects </td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>100K</strong> API Access </td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>200MB</strong> Storage </td>
-                                    </tr>
-                                    <tr>
-                                        <td> Custom <strong>Cloud</strong> Services </td>
-                                    </tr>
-                                    <tr>
-                                        <td> Weekly <strong>Reports</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td> 7/24 <strong>Support</strong></td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <!--/.panel-body -->
-                            <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Choose Plan</a></div>
+                        <!--/.panel-heading -->
+                        <div class="panel-body">
+                            <table class="table">
+                                <tr>
+                                    <td><strong>1</strong> location</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>15</strong> minute session</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>5</strong> Digital Images</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <ul>
+                                            <li><strong>Online Delivery & Printing Options (via shootproof)</strong></li>
+                                            <li><strong>Photo Print Release</strong></li>    
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
-                        <!--/.pricing -->
+                        <!--/.panel-body -->
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Book a Session</a></div>
                     </div>
-                    <!--/column -->
-                    <div class="col-md-4">
-                        <div class="pricing panel box bg-pastel-leaf">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">Corporate Plan</h4>
-                                <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">55</span>
-                                    <span class="price-duration">year</span></div>
-                            </div>
-                            <!--/.panel-heading -->
-                            <div class="panel-body">
-                                <table class="table">
-                                    <tr>
-                                        <td><strong>20</strong> Projects </td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>300K</strong> API Access </td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>500MB</strong> Storage </td>
-                                    </tr>
-                                    <tr>
-                                        <td> Custom <strong>Cloud</strong> Services </td>
-                                    </tr>
-                                    <tr>
-                                        <td> Weekly <strong>Reports</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td> 7/24 <strong>Support</strong></td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <!--/.panel-body -->
-                            <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Choose Plan</a></div>
-                        </div>
-                        <!--/.pricing -->
-                    </div>
-                    <!--/column -->
+                    <!--/.pricing -->
                 </div>
-                <!--/.row -->
+                <!--/column -->
+                <div class="col-md-4">
+                    <div class="pricing panel box bg-pastel-rose">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">Longhorn Package</h4>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">175</span>
+                                <span class="price-duration">per session</span></div>
+                        </div>
+                        <!--/.panel-heading -->
+                        <div class="panel-body">
+                            <table class="table">
+                                <tr>
+                                    <td><strong>1</strong> location</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>45</strong> minute session</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>15</strong> Digital Images</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <ul>
+                                            <li><strong>Online Delivery & Printing Options (via shootproof)</strong></li>
+                                            <li><strong>Photo Print Release</strong></li>    
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--/.panel-body -->
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Book a Session</a></div>
+                    </div>
+                    <!--/.pricing -->
+                </div>
+                <!--/column -->
+                <div class="col-md-4">
+                    <div class="pricing panel box bg-pastel-leaf">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">Lady Bird Package</h4>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">200</span>
+                                <span class="price-duration">per session</span></div>
+                        </div>
+                        <!--/.panel-heading -->
+                        <div class="panel-body">
+                            <table class="table">
+                                <tr>
+                                    <td><strong>1-2</strong> location (Less than 10 min drive)</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>60</strong> minute session</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>20</strong> Digital Images</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <ul>
+                                            <li><strong>Online Delivery & Printing Options (via shootproof)</strong></li>
+                                            <li><strong>Photo Print Release</strong></li>    
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--/.panel-body -->
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Book a Session</a></div>
+                    </div>
+                    <!--/.pricing -->
+                </div>
+                <!--/column -->
             </div>
-            <!-- /.container -->
+            <!--/.row -->
+            <div class="row mt-3">
+                <div class="col-4 mx-auto">
+                    <div class="pricing panel box bg-pastel-violet">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">Package Special</h4>
+                        </div>
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Contact for Info</a></div>
+                    </div>
+                </div>
+            </div>
+            <!--/.row -->
+            <div class="row mt-3">
+                <div class="col-12 mx-auto text-center">
+                    <p>All pricing includes processing time and set up</p>
+                    <p>(5-10 business days processing time)</p>
+                    <p>For all other photography inquiries that are not mentioned in this pricing site please contact me.</p>
+                </div>
+            </div>
+            <!--/.row -->
+        </div>
+        <!-- /.container -->
     </div>
     <!-- /.wrapper -->
     <footer class="dark-wrapper inverse-text">
