Add image titles, resolves #25

--- a/albums.html
+++ b/albums.html
@@ -47,8 +47,7 @@
     </nav>
     <div class="wrapper bg-pastel-default">
       <div class="container inner pt-70">
-        <h1 class="heading text-center">Hi, This is Missio</h1>
-        <h2 class="sub-heading2 text-center">Wedding, Fashion, Event Photographer</h2>
+        <div class="row"><img src="style/images/albums.png" class="mx-auto"></div>
         <div class="space50"></div>
         <div class="tiles grid">
           <div class="items row isotope boxed grid-view text-center">
