--- a/shop.html
+++ b/shop.html
@@ -47,7 +47,7 @@
     </nav>
     <div class="wrapper bg-pastel-default">
       <div class="container inner">
-        <h2 class="section-title mb-40 text-center">Services with Grid View</h2>
+        <div class="row"><img src="style/images/services.png" class="mx-auto"></div>
         <div class="space10"></div>
         <div class="tiles">
           <div class="items row boxed grid-view text-center">
