--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,9 @@
     </nav>
     <div class="wrapper bg-pastel-default">
       <div class="container inner pt-70">
+        <div class="row"><img src="style/images/contact.png" class="mx-auto"></div>
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
-            <h2 class="section-title text-center">Get in Touch</h2>
             <p class="text-center">Nullam quis risus eget urna mollis ornare vel eu leo. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Integer posuere erat.</p>
             <div class="space20"></div>
             <div class="row text-center">
