--- a/gallery.html
+++ b/gallery.html
@@ -47,8 +47,7 @@
     </nav>
     <div class="wrapper bg-pastel-default">
       <div class="container inner pt-70">
-        <h1 class="heading text-center">Hi, This is Missio</h1>
-        <h2 class="sub-heading2 text-center">Food & Event Photographer</h2>
+        <div class="row"><img src="style/images/gallery.png" class="mx-auto"></div>
         <div class="space50"></div>
         <div id="cube-grid-filter" class="cbp-filter-container text-center">
           <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">All</div>
